[app:layouts:Panda] Set page element overflow to hidden to avoid margin overflow

--- a/app/layouts/Panda/styles.module.scss
+++ b/app/layouts/Panda/styles.module.scss
@@ -4,6 +4,7 @@
 .page {
   width: 100%;
   min-height: 100vh;
+  overflow: hidden;
 }
 
 .content {
